<resources>
    <string name="app_name">mxs-bitcoin-wallet</string>
    <string name="abertura_atencao">Atenção!</string>
    <string name="atencao_proximo">Próximo</string>
    <string name="registrar_voltar">Voltar</string>
    <string name="tv_text_register_1">Enter your password below and click the "generate seeds" button. The password is optional, but it will give you more security. Even if a hacker has access to your seeds, he will not be able to restore your wallet without your password. The result of this process will be 24 keywords. Guard your password and seeds carefully!</string>
    <string name="register_next">Next</string>
    <string name="warning_next">Next</string>
    <string name="tv_text_warning_welcome_1">Welcome to your new Bitcoin wallet!</string>
    <string name="tv_text_warning_welcome_2">We recommend that you do not leave a significant amount of Bitcoins in this wallet and instead use a cold wallet to store large amounts.</string>
    <string name="tv_text_warning_welcome_3">Cold wallets offer an additional level of security when storing Bitcoins as they are not connected to the internet and therefore not vulnerable to hackers.</string>
    <string name="tv_text_warning_welcome_4">Keep in mind that the security of your cryptocurrencies is your responsibility, so make sure you always protect your passwords and keep your wallet up to date.</string>
    <string name="generate_seeds">Generate Seeds</string>
    <string name="finish">Finish</string>
    <string name="tv_pin_1">The last step will be for you to define a PIN (Personal Identification Number) that will be necessary to access this application, in addition to carrying out transactions on your account.</string>
    <string name="tv_pin_2">This will bring more security to your wallet. If you forget your PIN, you will need to restore your wallet using your seeds and password set in the previous step.</string>
    <string name="tv_pin_3">Enter your PIN below and tap the finish button.</string>
</resources>