<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_warning_welcome_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6sp"
        android:text="@string/tv_text_warning_welcome_1"
        android:textColor="#FBAC2C"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_warning_welcome_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:padding="6sp"
        android:text="@string/tv_text_warning_welcome_2"
        android:textColor="#FBAC2C"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_warning_welcome_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:padding="6sp"
        android:text="@string/tv_text_warning_welcome_3"
        android:textColor="#FBAC2C"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_warning_welcome_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:padding="6sp"
        android:text="@string/tv_text_warning_welcome_4"
        android:textColor="#FBAC2C"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_warning_next"
        style="@style/btn_yellow_outline"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginVertical="6sp"
        android:text="@string/warning_next"
        android:textColor="#FBAC2C"
        android:textSize="15sp" />
</LinearLayout>

