<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_register_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/tv_text_register_1"
        android:textColor="#FBAC2C"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_register_seeds"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15sp"
        android:background="@color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register_generate_seeds"
        style="@style/btn_yellow_outline"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:text="@string/generate_seeds"
        android:textColor="#FBAC2C"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_register_seeds"
        style="@style/btn_yellow_outline"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_marginVertical="18sp"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="13sp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FBAC2C"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register_next"
        style="@style/btn_yellow_outline"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:text="@string/register_next"
        android:textColor="#FBAC2C"
        android:textSize="15sp" />
</LinearLayout>
